--- a/favicon/manifest.json
+++ b/favicon/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Infocorp Developer Team",
   "short_name": "Infocorp",
-  "start_url": ".",
+  "start_url": "/",
   "display": "standalone",
   "theme_color": "#fff",
   "background_color": "#fff",
